# Quasi

./: .bazelrc  .clang-format  .gitignore  .gitmodules  AGENTS.md  BUILD.bazel  CLAUDE.md  CMakeLists.txt  MODULE.bazel  README.md  Superbuild.cmake
.github/workflows/: ci.yml
backends/metal/: BUILD.bazel  plugin.mm
data/models/: bunny.json
data/scenes/: basic_lighting_test.json  cornell_box.json  cornell_box_bunny.json  cornell_box_hq.json  cornell_box_showcase.json  default_scene.json  depth_of_field_comparison.json  five_spheres.json  multisampling_test_scene.json  reflections_test.json  sampling_comparison.json  simple_mesh.json
scenes/: README.md  adaptive_sampling_test.json  blue_noise_test.json  cornell_box.json  cornell_box_demo.json  cornell_box_hq.json  cornell_box_hq_reflective.json  cornell_box_real.json  cornell_box_reflective.json  cornell_box_showcase.json  cornell_box_tone_mapping_demo.json  depth_of_field_portrait.json  depth_of_field_test.json  high_quality_test.json  sphere_collection.json  sphere_test_scene.json  test_scene.json
scripts/: analyze_bunny.py  analyze_mesh.py  convert_obj_to_json.py
src/: BUILD.bazel  CMakeLists.txt  geometry.cpp  geometry.h
src/apps/: CMakeLists.txt  Info.plist  metal_triangle.swift  quasi.cpp  raytracer.metal  rt.cpp  rt_metal.cpp  rt_single.cpp  shaders.metal
src/geometry/: Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  Vec3.cpp  box.cpp  box.hpp  bvh.cpp  bvh.hpp  geometry.h  geometry.hpp  mesh.cpp  mesh.hpp  ray.cpp  ray.hpp  reflection.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp  vec.cpp  vec.hpp  vec3.cpp  vec3.hpp
src/io/: PPMWriter.h  ppm_writer.hpp  scene_parser.cpp  scene_parser.hpp
src/lighting/: light.hpp  phong.cpp  phong.hpp
src/materials/: CheckerboardTexture.h  Texture.h  checkerboard_texture.hpp  material.hpp  texture.hpp
src/quasi/: BUILD.bazel  platform.hpp
src/quasi/async/: BUILD.bazel  async.hpp  awaitables.hpp  file_watcher.hpp  scheduler.hpp  task.hpp
src/quasi/gpu/: BUILD.bazel  gpu.hpp  types.hpp
src/quasi/gpu/metal/: BUILD.bazel  context.hpp  context.mm
src/quasi/host/: BUILD.bazel  main.cpp  window.cpp  window.hpp
src/quasi/io/: BUILD.bazel  exr_writer.cpp  exr_writer.hpp
src/quasi/math/: BUILD.bazel  math.hpp  ray.hpp  vec.hpp
src/quasi/plugin/: BUILD.bazel  dynamic_library.hpp  loader.hpp  manager.hpp  plugin.hpp  plugin_interface.hpp
src/quasi/scene/: BUILD.bazel  camera.hpp  cornell_box.hpp  material.hpp  quad.hpp  scene.hpp  sphere.hpp
src/radiometry/: Camera.h  Color.h  camera.hpp  color.cpp  color.hpp  depth_of_field_camera.cpp  depth_of_field_camera.hpp
src/rendering/: tile_renderer.cpp  tile_renderer.hpp
src/sampling/: adaptive_integrator.cpp  adaptive_integrator.hpp  average_integrator.cpp  average_integrator.hpp  blue_noise_pattern.cpp  blue_noise_pattern.hpp  poisson_disk_pattern.cpp  poisson_disk_pattern.hpp  sample_integrator.cpp  sample_integrator.hpp  sample_pattern.cpp  sample_pattern.hpp  stratified_pattern.cpp  stratified_pattern.hpp
src/scene/: ray_tracer.cpp  ray_tracer.hpp  scene.cpp  scene.hpp
test/: BUILD.bazel  async_test.cpp  exr_writer_test.cpp  plugin_test.cpp
tests/: CMakeLists.txt  test_adaptive_integrator.cpp  test_basic.cpp  test_blue_noise_pattern.cpp  test_checkerboard_texture.cpp  test_ray_sphere_intersection.cpp  test_ray_triangle_intersection.cpp
