"""Quasi - Advanced Rendering System with Hot-Reloadable GPU Backends"""

module(
    name = "quasi",
    version = "0.1.0",
)

# C++ rules (required for Bazel 9+)
bazel_dep(name = "rules_cc", version = "0.2.17")

# Apple toolchain support (required for objc_library in Bazel 9+)
bazel_dep(name = "apple_support", version = "2.2.0")

apple_cc_configure = use_extension(
    "@apple_support//crosstool:setup.bzl",
    "apple_cc_configure_extension",
)
use_repo(apple_cc_configure, "local_config_apple_cc", "local_config_apple_cc_toolchains")

register_toolchains("@local_config_apple_cc_toolchains//:all")

# Platform detection
bazel_dep(name = "platforms", version = "1.0.0")

# Catch2 for unit testing
bazel_dep(name = "catch2", version = "3.8.0")

# GLFW for windowing
bazel_dep(name = "glfw", version = "3.4.0.bcr.1")

# OpenEXR for HDR image output
bazel_dep(name = "openexr", version = "3.4.7")
